# prompttrace

./: .gitignore  README.md  future-of-ai-500-word-essay.docx  future-of-ai-500-word-essay.md  future_of_ai.docx  future_of_ai.md  index.html  package-lock.json  package.json
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
.openclaw/: workspace-state.json
cpp-http-server/: .gitignore  CMakeLists.txt  README.md
cpp-http-server/benchmarks/: README.md  run_bench.sh  smoke_test.sh
cpp-http-server/include/http/: config.hpp  logger.hpp  request.hpp  response.hpp  router.hpp  server.hpp  static_file_handler.hpp  thread_pool.hpp
cpp-http-server/public/: app.js  data.json  hello.txt  index.html  style.css
cpp-http-server/scripts/: run.sh
cpp-http-server/src/: config.cpp  logger.cpp  main.cpp  request.cpp  response.cpp  router.cpp  server.cpp  static_file_handler.cpp  thread_pool.cpp
memory/: 2026-03-07.md
src/: index.ts
src/aggregator/: analyze.ts  load.ts  openclaw.ts  traces.ts
src/cli/: dashboard.ts  demo.ts  export.ts  openclaw.ts
src/collector/: jsonl.ts
src/dashboard/: index.html
src/sdk/: cost.ts  errors.ts  redact.ts  retry.ts  trace.ts
src/types/: trace.ts
